--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
       </div>
       <div id="socials-container">
         <img src="linkedin.png" alt="My LinkedIn profile" class="icon"
-          onclick="location.href='https://linkedin.com/'" />
-        <img src="github.png" alt="My Github profile" class="icon" onclick="location.href='https://github.com/'" />
+          onclick="location.href='https://www.linkedin.com/in/aditya-kashyap-1b7b56277/'" />
+        <img src="github.png" alt="My Github profile" class="icon" onclick="location.href='https://github.com/Aditya24Kashyap'" />
       </div>
     </div>
   </section>
@@ -211,11 +211,11 @@
       <div class="about-containers">
         <div class="details-container color-container">
           <div class="article-container">
-            <img src="./assets/project-1.png" alt="Project 1" class="project-img" />
+            <img src="project1porf.png" alt="Project 1" class="project-img" />
           </div>
           <h2 class="experience-sub-title project-title">Project One</h2>
           <div class="btn-container">
-            <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">
+            <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/Aditya24Kashyap/CodSoft-TaskNo1-PortFolio'">
               Github
             </button>
             <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">
@@ -225,11 +225,11 @@
         </div>
         <div class="details-container color-container">
           <div class="article-container">
-            <img src="./assets/project-2.png" alt="Project 2" class="project-img" />
+            <img src="project2page.png" alt="Project 2" class="project-img" />
           </div>
           <h2 class="experience-sub-title project-title">Project Two</h2>
           <div class="btn-container">
-            <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">
+            <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/Aditya24Kashyap/CodSoft-TaskNo2-LandingPage'">
               Github
             </button>
             <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">
@@ -239,11 +239,11 @@
         </div>
         <div class="details-container color-container">
           <div class="article-container">
-            <img src="./assets/project-3.png" alt="Project 3" class="project-img" />
+            <img src="project3cal.jpg" alt="Project 3" class="project-img" />
           </div>
           <h2 class="experience-sub-title project-title">Project Three</h2>
           <div class="btn-container">
-            <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">
+            <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/Aditya24Kashyap/CodSoft-TaskNo3-Calculator'">
               Github
             </button>
             <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">
